--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 
   background-color: #ffe53b;
   background-image: linear-gradient(147deg, #ffe53b 0%, #ff2525 74%);
+  background-attachment: fixed;
   font-family: "Poppins", sans-serif;
   min-height: 100vh;
 }
